RESOLVED FIXED172784
[Cocoa] "administrativeArea" contact field maps to the wrong CNPostalAddress key when creating NSErrors
https://bugs.webkit.org/show_bug.cgi?id=172784
Summary [Cocoa] "administrativeArea" contact field maps to the wrong CNPostalAddress ...
Andy Estes
Reported 2017-05-31 16:11:58 PDT
[Cocoa] "administrativeArea" contact field maps to the wrong CNPostalAddress key when creating NSErrors
Attachments
Patch (1.76 KB, patch)
2017-05-31 16:13 PDT, Andy Estes
no flags
Andy Estes
Comment 1 2017-05-31 16:12:46 PDT
Andy Estes
Comment 2 2017-05-31 16:13:52 PDT
WebKit Commit Bot
Comment 3 2017-05-31 17:01:42 PDT
Comment on attachment 311650 [details] Patch Clearing flags on attachment: 311650 Committed r217641: <http://trac.webkit.org/changeset/217641>
WebKit Commit Bot
Comment 4 2017-05-31 17:01:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.