[Cocoa] "administrativeArea" contact field maps to the wrong CNPostalAddress key when creating NSErrors https://bugs.webkit.org/show_bug.cgi?id=172784 <rdar://problem/32414416>

Reviewed by Beth Dakin.

* UIProcess/ApplePay/cocoa/WebPaymentCoordinatorProxyCocoa.mm:
(WebKit::toNSError): Used CNPostalAddressStateKey instead of CNPostalAddressCityKey.


Canonical link: https://commits.webkit.org/189683@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217641 268f45cc-cd09-0410-ab3c-d52691b4dbfc